--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,11 @@
             <input type="text">
         </div>
         <div class = 'button'>
+            <input type="submit" name="#" id="" value = '#'>
+            <input type="submit" name="#" id="" value = '#'>
+            <input type="submit" name="#" id="" value = '#'>
+            <input type="submit" name="#" id="" value = '#'>
+            <br>
             <input type="submit" name="7" id="" value = '7'>
             <input type="submit" name="8" id="" value = '8'>
             <input type="submit" name="9" id="" value = '9'>
